2008-02-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_timestamp): Do not spin on unrecognized option. Bugfix.

2008-02-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (gd_strdup) src/set.c (set_decimalsign): Fix segfault due
	to trying to free a string returned by getenv().
	Bugfix.

2008-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term):  Allow terminals with similar names to
	coexist (svg/svga/svgalib). Back-ported from 4.3.

2008-02-01  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_readbinary): Fix off-by-one error in the implicit
	"column 0" of non-matrix binary data files.

2008-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* graph3d.c (map3d_getposition, map3d_position_r): Fix case of y graph
	coordinate and splot_map.

2008-01-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes):  Do not clip 3D image data
	against Z range if the plot mode is "set view map".

2008-01-13  Ethan A Merritt  <merritt@u.washington.edu>

	Backport fix for Bug #1850588

	* src/datafile.c: Call add_tic_user with a tick type of -1 (a new flag
	value) rather than 0 (major tick).  This allows to distinguish between
	tick labels read from a data file and those from the command line.

	* src/axis.c (gen_tics): Treat tick type -1 the same as major ticks. 

	* src/set.c (prune_dataticks) src/setshow.h: New routine to purge any
	axis tick labels left over from 'using xtics(n)' option of previous
	plot command.

	* plot2d.c (plotrequest): Call prune_dataticks() before each new plot.

2008-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (pm3d_plot): When color information is given in a separate
	column, we must not use the interpolated z coordinate as for color.
	Bug #1783405

2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (replot_command): Fix for replot with unknown terminal.
