@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.157.2.14 2008/01/27 23:16:05 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.157.2.15 2008/02/20 21:18:10 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graph3d.c */
@@ -500,9 +500,9 @@ static void
 place_arrows3d(int layer)
 {
     struct arrow_def *this_arrow;
+    BoundingBox *clip_save = clip_area;
 
-    /* Allow arrows to run off the plot, so long as they are still on
-     * the canvas */
+    /* Allow arrows to run off the plot, so long as they are still on the canvas */
     if (term->flags & TERM_CAN_CLIP)
       clip_area = NULL;
     else
@@ -522,6 +522,7 @@ place_arrows3d(int layer)
 	    FPRINTF((stderr,"place_arrows3d: skipping out-of-bounds arrow\n"));
 	}
     }
+    clip_area = clip_save;
 }
 
 /* we precalculate features of the key, to save lots of nested
